--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./riscv_logo.png" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RVG Issues Viewer - RISC-V</title>
-    <meta name="description" content="RISC-V Governance Issues Viewer - Browse task groups, SIGs, and committees" />
+    <title>Tech Committees Explorer - RISC-V</title>
+    <meta name="description" content="RISC-V Tech Committees Explorer - Browse task groups, SIGs, and committees" />
   </head>
   <body>
     <div id="root"></div>
